--- a/public/laravel/css/style.css
+++ b/public/laravel/css/style.css
@@ -61,6 +61,7 @@ body
 	line-height: 25px;
 }
 
+
 .wrapper
 {
 	width:760px;
@@ -109,91 +110,112 @@ body
 	overflow:hidden;
 }
 
-.content
+#top{
+	width: 100%;
+	top: 0px;
+	position: fixed;
+	height: 185px;
+}
+
+#content
 {
-	width:540px;
-	float:right;
-	border-left:1px solid #eee;
-	padding-left:1.5em;
+	padding:0 1.5em 0 1.5em;
+	background: #fbfafa;
 }
 
-.content blockquote p
-{
-	background-color:#f8f8f8;
-	padding:0.5em 1em;
-	border-left:3px solid #E3591E;
-	text-shadow:1px 1px 0 #fff;
-	font-style:italic;
-	margin:3em 0;
+#profile{
+	background: white;
+	height: 65px;
+	padding: 55px 0 0 0;
 }
 
-.content p
-{
-	line-height:1.6em;
-	margin:1.5em 0;
+ul#tags{
+	float: right;
+	position: relative;
+}
+ul#tags li{
+	float: left;
+	position: relative;
+	margin: 0 1em 0 1em;
+}
+ul#tags li a{
+	color: #ea5c5c;
+}
+.instabtn{
+	border-radius: 30px;
+	-moz-border-radius: 30px;
+	-webkit-border-radius: 30px;
+	-khtml-border-radius: 30px;
+	width: 40px;
+	height: 40px;
+	position: relative;
+	margin: -59px 20px 0 0;
+	float: right;
+}
+.instagram-image{
+	display: inline-block;
+	width: 23.9%;
+	border: solid 10px white;
+	vertical-align: top;
+}
+.instagram-image p{
+	position: relative;
+	float: left;
+	width: 20px;
+	margin: -45px 0 0 20px;
+	color: white;
+	text-transform: uppercase;
+}
+.like{
+	border: 0px;
+	background-color: #e56c69;
+/* 	text-indent: -99999px; */
+/* 	padding: 20px; */
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+	color: white;
+font-size: 19px;
+}
+.like:before {
+	content: "\e008";
+}
+.unlike{
+	border: 0px;
+	background-color: #777777;
+/* 	text-indent: -99999px; */
+/* 	padding: 20px; */
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+	color: white;
+font-size: 19px;
+}
+.unlike:before {
+	content: "\e008";
 }
 
-.content>h1 {
-	font-size: 18pt;
-}
 
-.content>h2 {
-	font-size: 14pt;
-	margin-top:2.2em;
-}
+/****************************************************************
 
-div.home>h2:not(:first-child) {
-	margin-top:2.2em;
-}
+ ============== start the switch handles ================
 
-div.home>h2 {
-	font-size: 14pt;
-}
+*****************************************************************/
 
-.content>h3 {
-	font-size: 12pt;
-}
 
-.content>h4 {
-	font-size: 10pt;
-}
 
-.content>h1:not(:first-child) {
-	margin-top: 30px;
-}
 
-.content table
-{
-	border-collapse:collapse;
-	border: 1px solid #eee;
-	width:100%;
-	line-height:1.5em;
-}
 
-.content table code
-{
-	background-color:transparent;
-	font-size:0.9em;
-}
-
-.content table td, .content table th
-{
-	border:1px solid #eee;
-	padding:0.5em 0.7em;
-	vertical-align:middle;
-	text-align:left;
-}
-
-.content table th
-{
-	background-color:#f5f5f5;
-}
-
-.content li
-{
-	line-height:1.5em;
-	margin-bottom:1em;
-}
 
 a, a:visited
 {
